# vent-frais

./: .gitignore  README.md  analysis.ipynb  card_draw.py  cards.py  constants.py  design-carte.ipynb  design-carte.py  proj.ipynb  pyproject.toml  script.sh  test.deck
data/: questions.csv  raw.grib2  shapes.json
