[tool.poetry]
name = "vent-frais"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
xarray = {version = "^2022.6.0"}
matplotlib = "^3.5.2"
cfgrib = "^0.9.10"
PyQt5 = "^5.15.7"
scipy = "^1.8.1"
drawSvg = "^1.8.3"
Shapely = "^1.8.2"
pikepdf = "^5.4.2"
tqdm = "^4.64.0"
pygame-ce = "^2.2.1"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
ptpython = "^3.0.20"
ipykernel = "^6.15.1"
mypy = "^0.971"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
